# christchurch-cycling

./: README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
data/: cycling-counters.parquet
