[tool.poetry]
name = "ccc-cycling"
version = "0.1.0"
description = ""
authors = ["Brian Thorne <brian@hardbyte.nz>"]
readme = "README.md"
packages = [{include = "ccc_cycling"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.1"
pydantic = "^1.10.8"
duckdb = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

